modificando modificacion brusca

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                     de ají y cilantro.
                   </p>
 
-                  <button class="btn btn-sm btn-warning ml-3" name="Ceviche Tropical">
+                  <button class="btn btn-sm btn-warning ml-3" id="Ceviche Tropical">
                     Agregar al carrito
                   </button>
                 </div>
@@ -308,7 +308,7 @@
                     acompañado de ajonjolí y cilantro.
                   </p>
 
-                  <button class="btn btn-sm btn-warning ml-3" name="Ceviche Nikkei">
+                  <button class="btn btn-sm btn-warning ml-3" id="Ceviche Nikkei">
                     Agregar al carrito
                   </button>
                 </div>
@@ -330,7 +330,7 @@
                     cancha.
                   </p>
 
-                  <button class="btn btn-sm btn-warning ml-3">
+                  <button class="btn btn-sm btn-warning ml-3" id="Ceviche de Trucha">
                     Agregar al carrito
                   </button>
                 </div>
@@ -352,7 +352,7 @@
                     cilantro.
                   </p>
 
-                  <button class="btn btn-sm btn-warning ml-3">
+                  <button class="btn btn-sm btn-warning ml-3" id="Ceviche al Rocoto">
                     Agregar al carrito
                   </button>
                 </div>
@@ -374,7 +374,7 @@
                     recargar energías.
                   </p>
 
-                  <button class="btn btn-sm btn-warning ml-3">
+                  <button class="btn btn-sm btn-warning ml-3" id="Leche de Tigre">
                     Agregar al carrito
                   </button>
                 </div>
@@ -433,7 +433,8 @@
                         jugo fresco.
                       </p>
                       <h6 class="text-primary menu-price">S/. 35.50</h6>
-                      <button class="btn btn-sm btn-warning ml-3">
+                      <button class="btn btn-sm btn-warning ml-3" id="Tostadas con pescado marinado y palta, acompañadas de
+                      jugo fresco.">
                         Agregar al carrito
                       </button>
                     </div>
@@ -449,7 +450,8 @@
                         criolla.
                       </p>
                       <h6 class="text-primary menu-price">S/. 24.50</h6>
-                      <button class="btn btn-sm btn-warning ml-3">
+                      <button class="btn btn-sm btn-warning ml-3" id="Filetes de pescado crujiente con yuca frita y salsa
+                      criolla.">
                         Agregar al carrito
                       </button>
                     </div>
@@ -464,7 +466,8 @@
                         fresca.
                       </p>
                       <h6 class="text-primary menu-price">S/. 14.50</h6>
-                      <button class="btn btn-sm btn-warning ml-3">
+                      <button class="btn btn-sm btn-warning ml-3" id="Puré de papa relleno de atún, acompañado de ensalada
+                      fresca.">
                         Agregar al carrito
                       </button>
                     </div>
@@ -481,7 +484,8 @@
                         encurtida.
                       </p>
                       <h6 class="text-primary menu-price">S/. 35.50</h6>
-                      <button class="btn btn-sm btn-warning ml-3">
+                      <button class="btn btn-sm btn-warning ml-3" id="Tamal de maíz relleno de mariscos, servido con cebolla
+                      encurtida.">
                         Agregar al carrito
                       </button>
                     </div>
@@ -497,7 +501,7 @@
                         integral.
                       </p>
                       <h6 class="text-primary menu-price">S/. 12.50</h6>
-                      <button class="btn btn-sm btn-warning ml-3">
+                      <button class="btn btn-sm btn-warning ml-3" id="Ensalada de Pulpo con Palta">
                         Agregar al carrito
                       </button>
                     </div>
@@ -513,7 +517,8 @@
                         salsa criolla.
                       </p>
                       <h6 class="text-primary menu-price">S/. 18.50</h6>
-                      <button class="btn btn-sm btn-warning ml-3">
+                      <button class="btn btn-sm btn-warning ml-3" id="Tortilla de pescado con hierbas frescas, servida con
+                      salsa criolla.">
                         Agregar al carrito
                       </button>
                     </div>
@@ -533,7 +538,8 @@
                         choclo, camote y cancha.
                       </p>
                       <h6 class="text-primary menu-price">S/. 14.50</h6>
-                      <button class="btn btn-sm btn-warning ml-3">
+                      <button class="btn btn-sm btn-warning ml-3" id="Pescado fresco marinado en limón, acompañado de
+                      choclo, camote y cancha.">
                         Agregar al carrito
                       </button>
                     </div>
@@ -548,7 +554,8 @@
                         limo y cilantro.
                       </p>
                       <h6 class="text-primary menu-price">S/. 35.50</h6>
-                      <button class="btn btn-sm btn-warning ml-3">
+                      <button class="btn btn-sm btn-warning ml-3" id="Mezcla de pescado y mariscos, con cebolla morada, ají
+                      limo y cilantro.">
                         Agregar al carrito
                       </button>
                     </div>
@@ -564,7 +571,8 @@
                         mariscos.
                       </p>
                       <h6 class="text-primary menu-price">S/. 24.50</h6>
-                      <button class="btn btn-sm btn-warning ml-3">
+                      <button class="btn btn-sm btn-warning ml-3" id="Arroz sazonado con ají amarillo y una variedad de
+                      mariscos.">
                         Agregar al carrito
                       </button>
                     </div>
@@ -580,7 +588,8 @@
                         y yuca frita.
                       </p>
                       <h6 class="text-primary menu-price">S/. 18.50</h6>
-                      <button class="btn btn-sm btn-warning ml-3">
+                      <button class="btn btn-sm btn-warning ml-3" id="Pescado y mariscos fritos, servidos con salsa criolla
+                      y yuca frita.">
                         Agregar al carrito
                       </button>
                     </div>
@@ -596,7 +605,8 @@
                         amarillo, acompañado de yuca.
                       </p>
                       <h6 class="text-primary menu-price">S/. 35.50</h6>
-                      <button class="btn btn-sm btn-warning ml-3">
+                      <button class="btn btn-sm btn-warning ml-3" id="Pescado cocido en caldo de tomate, cebolla y ají
+                      amarillo, acompañado de yuca.">
                         Agregar al carrito
                       </button>
                     </div>
