--- a/pages/completarpago.html
+++ b/pages/completarpago.html
@@ -214,7 +214,7 @@
               );
 
               // Enviar el evento de compra
-              gtag("event", "purchase2", {
+              gtag("event", "purchase", {
                 transaction_id: transactionId, // Aquí podrías generar un ID único para la transacción
                 currency: "PEN", // Cambia la moneda si es necesario
                 value: totalValue, // Valor total del carrito
