areglando tags a debajo head

--- a/pages/procederpago.html
+++ b/pages/procederpago.html
@@ -15,7 +15,18 @@
       'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
       })(window,document,'script','dataLayer','GTM-MSP6QJW7');</script>
 </head>
+ <!-- Google tag (gtag.js) -->
+ <script async src="https://www.googletagmanager.com/gtag/js?id=G-VGHCBZG439"></script>
 
+ <script>
+   window.dataLayer = window.dataLayer || [];
+   function gtag() {
+     dataLayer.push(arguments);
+   }
+   gtag("js", new Date());
+
+   gtag("config", "G-VGHCBZG439");
+ </script>
 <body>
 
 
@@ -23,9 +34,7 @@
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MSP6QJW7"
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-VGHCBZG439"></script>
-
+   
     
     <div class="container mt-5">
         <!-- Barra de Progreso de Pasos -->
