--- a/pages/completarpago.html
+++ b/pages/completarpago.html
@@ -151,7 +151,7 @@
           <button
             type="button"
             class="btn btn-primary btn-block mt-4"
-            id="confirmar-pedido"
+            id="confirmar-pedido" onclick="finalizarCompra()"
           >
             Pagar Ahora
           </button>
@@ -248,6 +248,63 @@
           console.error('Elemento con id "confirmar-pedido" no encontrado.');
         }
       });
+
+
+
+      // Función para simular la compra y enviar el evento 'purchase'
+function finalizarCompra() {
+
+    const transactionId = `T${Date.now()}`; // Genera un ID de transacción único
+        if (confirmarPedidoBtn) {
+          confirmarPedidoBtn.addEventListener("click", function () {
+            // Obtiene el carrito del LocalStorage
+            const carrito = JSON.parse(localStorage.getItem("carrito")) || [];
+
+            if (carrito.length > 0) {
+              let totalValue = carrito.reduce(
+                (total, producto) =>
+                  total + producto.precio * producto.cantidad,
+                0
+              );
+
+              // Enviar el evento de compra
+              gtag("event", "purchase", {
+                transaction_id: transactionId, // Aquí podrías generar un ID único para la transacción
+                currency: "PEN", // Cambia la moneda si es necesario
+                value: totalValue, // Valor total del carrito
+                items: carrito.map((producto) => ({
+                  item_id: producto.nombre, // ID o nombre del plato
+                  item_name: producto.nombre,
+                  price: producto.precio,
+                  quantity: producto.cantidad,
+                })),
+              });
+
+              // Enviar un evento individual por cada plato
+              carrito.forEach((producto) => {
+                gtag("event", "plato_mas_comprado", {
+                  event_category: "Productos",
+                  event_label: producto.nombre,
+                  value: producto.cantidad,
+                  price: producto.precio,
+                });
+              });
+
+              console.log(
+                "¡Compra registrada y eventos enviados a Google Analytics!"
+              );
+            } else {
+              console.log("El carrito está vacío.");
+            }
+          });
+        } else {
+          console.error('Elemento con id "confirmar-pedido" no encontrado.');
+        }
+
+    // Aquí iría la lógica que finaliza la compra (vaciar carrito, etc.)
+    localStorage.removeItem("carrito");
+    mostrarCarrito();
+}
     </script>
   </body>
 </html>
