--- a/pages/completarpago.html
+++ b/pages/completarpago.html
@@ -38,7 +38,7 @@
     }
     gtag("js", new Date());
 
-    gtag("config", "G-VGHCBZG439");
+    gtag("config", "G-VGHCBZG439" ,{ 'debug_mode': true });
   </script>
   <body>
     <!-- Google Tag Manager (noscript) -->
