--- a/pages/completarpago.html
+++ b/pages/completarpago.html
@@ -136,7 +136,7 @@
           <button
             type="button"
             class="btn btn-primary btn-block mt-4"
-            id="compras"
+            id="purchase"
           >
             Pagar Ahora
           </button>
