--- a/pages/completarpago.html
+++ b/pages/completarpago.html
@@ -31,7 +31,7 @@
     }
     gtag("js", new Date());
 
-    gtag("config", "G-VGHCBZG439" ,{ 'debug_mode': true });
+    gtag("config", "G-VGHCBZG439" );
   </script>
   <body>
      <!-- Google Tag Manager (noscript) -->
