--- a/index.html
+++ b/index.html
@@ -624,7 +624,8 @@
                         pescado, cebolla y ají.
                       </p>
                       <h6 class="text-primary menu-price">S/. 12.50</h6>
-                      <button class="btn btn-sm btn-warning ml-3">
+                      <button class="btn btn-sm btn-warning ml-3" id="Jugo de ceviche servido en vaso, con trozos de
+                      pescado, cebolla y ají.">
                         Agregar al carrito
                       </button>
                     </div>
@@ -645,7 +646,8 @@
                         amarillo o rocoto.
                       </p>
                       <h6 class="text-primary menu-price">S/. 24.50</h6>
-                      <button class="btn btn-sm btn-warning ml-3">
+                      <button class="btn btn-sm btn-warning ml-3" id=" Lonjas finas de pescado bañadas en salsa de ají
+                      amarillo o rocoto.">
                         Agregar al carrito
                       </button>
                     </div>
@@ -660,7 +662,8 @@
                         acompañado de pan crocante.
                       </p>
                       <h6 class="text-primary menu-price">S/. 35.50</h6>
-                      <button class="btn btn-sm btn-warning ml-3">
+                      <button class="btn btn-sm btn-warning ml-3" id="Pulpo tierno servido con crema de aceitunas negras,
+                      acompañado de pan crocante.">
                         Agregar al carrito
                       </button>
                     </div>
@@ -676,7 +679,8 @@
                         cebolla morada.
                       </p>
                       <h6 class="text-primary menu-price">S/. 14.50</h6>
-                      <button class="btn btn-sm btn-warning ml-3">
+                      <button class="btn btn-sm btn-warning ml-3" id="Camarones frescos marinados en limón, con ají limo y
+                      cebolla morada.">
                         Agregar al carrito
                       </button>
                     </div>
@@ -693,7 +697,8 @@
                         criolla.
                       </p>
                       <h6 class="text-primary menu-price">S/. 18.50</h6>
-                      <button class="btn btn-sm btn-warning ml-3">
+                      <button class="btn btn-sm btn-warning ml-3" id="Mariscos crujientes acompañados de yuca frita y salsa
+                      criolla.">
                         Agregar al carrito
                       </button>
                     </div>
@@ -709,7 +714,8 @@
                         de palta y choclo.
                       </p>
                       <h6 class="text-primary menu-price">S/. 35.50</h6>
-                      <button class="btn btn-sm btn-warning ml-3">
+                      <button class="btn btn-sm btn-warning ml-3" id="Filete de pescado a la plancha, servido con ensalada
+                      de palta y choclo.">
                         Agregar al carrito
                       </button>
                     </div>
@@ -724,7 +730,8 @@
                         tomate.
                       </p>
                       <h6 class="text-primary menu-price">S/. 12.50</h6>
-                      <button class="btn btn-sm btn-warning ml-3">
+                      <button class="btn btn-sm btn-warning ml-3" id="Sopa espesa de mariscos y pescado con ají panca y
+                      tomate.">
                         Agregar al carrito
                       </button>
                     </div>
