--- a/pages/completarpago.html
+++ b/pages/completarpago.html
@@ -12,7 +12,11 @@
     <!-- Estilos personalizados -->
     <link rel="icon" href="../images/piurano-logo.webp" type="image/x-icon" />
 
-   
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+      })(window,document,'script','dataLayer','GTM-MSP6QJW7');</script>
   </head>
   <!-- Google tag (gtag.js) -->
   <script
@@ -30,7 +34,10 @@
     gtag("config", "G-VGHCBZG439" );
   </script>
   <body>
-
+     <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MSP6QJW7"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
 
     <div class="container mt-5">
       <!-- Barra de Progreso de Pasos -->
