--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
   gtag("js", new Date());
 
   gtag("config", "G-VGHCBZG439");
+
+  gtag('consent', "default", "analytics_storage");
 </script>
 
 <body data-spy="scroll" data-target="#ftco-navbar" data-offset="200">
