--- a/index.html
+++ b/index.html
@@ -909,7 +909,7 @@
                 placeholder="Escribe tu mensaje"></textarea>
             </div>
             <div class="form-group">
-              <input type="submit" class="btn btn-primary btn-lg" value="Enviar mensaje" />
+              <input type="submit" class="btn btn-primary btn-lg" id="contactos" value="Enviar mensaje" />
             </div>
           </form>
         </div>
